# chess-legal-moves

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  test_python.py
include/: chess.hpp  game_end.hpp  legal_moves.hpp  structs.hpp
src/: board.txt  bot_move.cpp  legal_moves.cpp  main.cpp
